--- a/src/components/header.css
+++ b/src/components/header.css
@@ -17,7 +17,23 @@
 
 .nav {
     display: flex;
-    gap: 25px;
+    gap: 8px;
+}
+
+.nav-link {
+    position: relative;
+    padding: 4px 8px;
+}
+
+.submenu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background: white;
+    padding: 4px 8px;
+    display: flex;
+    gap: 8px;
+    flex-flow: column;
 }
 
 .logo {
