--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,6 +1,6 @@
 .footer {
     width: 100%;
-    border-bottom: 1px solid #ddd;
+    border-top: 1px solid #ddd;
     background: white;
     position: sticky;
     bottom: 0;
