--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,4 +1,3 @@
-
 .header {
     width: 100%;
     border-bottom: 1px solid #ddd;
@@ -22,25 +21,55 @@
 
 .nav-link {
     position: relative;
+}
+
+.nav-link.dropdown {
+    padding-right: 20px;
+}
+
+.nav-link a {
+    display: block;
     padding: 4px 8px;
 }
 
 .submenu {
     position: absolute;
     top: 100%;
-    left: 0;
+    left: -8px;
     background: white;
     padding: 4px 8px;
-    display: flex;
-    gap: 8px;
+    display: none;
     flex-flow: column;
+    align-items: flex-start;
+}
+
+.nav-link:hover .submenu {
+    display: flex;
+}
+
+.submenu-icon {
+    position: absolute;
+    top: 2px;
+    right: 4px;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: transform .3s ease;
+}
+
+.nav-link:hover .submenu-icon {
+    transform: rotate(180deg);
 }
 
 .logo {
     margin-right: auto;
+    min-width: 180px;
+    height: 34px;
 }
 
 .logo-img {
+    display: block;
     height: 34px;
     width: auto;
 }
@@ -88,6 +117,17 @@
     }
 
     .burger {
-        display: block;
+        display: flex;
+    }
+
+    .submenu {
+        position: relative;
+        display: flex;
+        left: 0;
+        padding: 0 8px;
+    }
+
+    .submenu-icon {
+        display: none;
     }
 }
