--- a/src/components/header.css
+++ b/src/components/header.css
@@ -43,6 +43,7 @@
     align-items: flex-start;
 }
 
+.dropdown.__open .submenu,
 .nav-link:hover .submenu {
     display: flex;
 }
@@ -56,8 +57,11 @@
     align-items: center;
     justify-content: center;
     transition: transform .3s ease;
+    background: none;
+    border: none;
 }
 
+.dropdown.__open .submenu-icon,
 .nav-link:hover .submenu-icon {
     transform: rotate(180deg);
 }
