--- a/src/App.css
+++ b/src/App.css
@@ -122,7 +122,7 @@ body {
     text-align: center;
 }
 
-.article-save {
+.article-button {
     margin: 16px 0;
     font-size: 18px;
     border: 1px solid #ccc;
@@ -133,7 +133,7 @@ body {
     font-weight: 600;
 }
 
-.article-save:hover {
+.article-button:hover {
     background: #ccc;
 }
 
